# bag_recorder

./: CMakeLists.txt  package.xml  readme.md
config/: standard.config
include/: bag_launcher.h  heartbeat.h
include/bag_recorder/: bag_recorder.h
launch/: default.launch  nano_recorder.launch
msg/: Rosbag.msg
src/: bag_launcher.cpp  bag_recorder.cpp  heartbeat.cpp  rosbag_recorder_node.cpp
